# secretnote

./: .dockerignore  .gitignore  CI.Dockerfile  Cargo.toml  Dockerfile  README.md  build-all-docker.sh  build-all-linux.sh  build-linux-amd64-docker.sh  issues.txt
.github/workflows/: build.yml
secretnote-fe/: .editorconfig  .gitignore  README.md  angular.json  karma.conf.js  package-lock.json  package.json  postbuild.js  prebuild-filter-icons.js  prebuild.js  server.ts  tsconfig.app.json
secretnote-fe/e2e/src/: app.e2e-spec.ts  app.po.ts
secretnote-fe/libs/: .gitignore  sjcl-build.sh
secretnote-fe/src/: bootstrap-mod.scss  bootstrap.scss  index.html  main.ts  proxy.conf.json  styles.less
secretnote-fe/src/app/: app-routing.module.ts  app.component.html  app.component.less  app.component.spec.ts  app.component.ts  app.module.ts  backend.service.spec.ts  backend.service.ts  chat-join.guard.spec.ts  chat-join.guard.ts  crypto.service.ts  octicon.directive.spec.ts  octicon.directive.ts  ui.service.spec.ts  ui.service.ts  usernames.service.spec.ts  usernames.service.ts
secretnote-fe/src/app/page-about/: page-about.component.html  page-about.component.spec.ts  page-about.component.ts
secretnote-fe/src/app/page-chat/: page-chat.component.html  page-chat.component.less  page-chat.component.scss  page-chat.component.spec.ts  page-chat.component.ts
secretnote-fe/src/app/page-chat-create/: page-chat-create.component.html  page-chat-create.component.spec.ts  page-chat-create.component.ts
secretnote-fe/src/app/page-faq/: page-faq.component.html  page-faq.component.spec.ts  page-faq.component.ts
secretnote-fe/src/app/page-not-found/: page-not-found.component.html
secretnote-fe/src/app/page-note-admin/: page-note-admin.component.html  page-note-admin.component.scss  page-note-admin.component.spec.ts  page-note-admin.component.ts
secretnote-fe/src/app/page-note-retrieve/: page-note-retrieve.component.html  page-note-retrieve.component.less  (+2 more)
secretnote-fe/src/environments/: .gitignore  environment.prod.ts  environment.ts
secretnote-fe/src/locale/: .gitignore  messages.de.xlf  messages.xlf
src/: chat_websocket.rs  chatbroker.rs  main.rs  my_redis_actor.rs  telegram_api.rs
src/cli/: cli.rs
src/statistics/: statistics.rs
static/: test.html  test.js
(+3 files in other folders)
