[package]
name = "secretnote"
version = "0.1.0"
authors = ["Markus Bauer <markus.bauer@cispa.saarland>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0-alpha.3"
actix-web = "3.0.0-beta.3"
actix-web-actors = "3.0.0-beta.1"
actix-files = "0.3.0-beta.1"
actix-redis = "0.9.0-alpha.2"
redis-async = "0.6.3"
serde = "1.0.115"
base64 = "0.12.3"
rand = "0.7.3"
env_logger = "0.7.1"
cached = "0.18.0"
bytes = "0.5.6"
