[package]
name = "secretnote"
version = "1.0.0"
authors = ["Markus Bauer <secretnote@mk-bauer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "^0.10.0"
actix-files = "^0.4.0"
actix-redis = "^0.9.1"
actix-utils = "^2.0.0"
actix-web = { version = "^3.3.2", features = ["rustls"] }
actix-web-actors = "^3.0.0"
backoff = "^0.2.1"
base64 = "^0.12.3"
bytes = "^0.5.6"
cached = "^0.19.0"
clap = "^3.0.0-beta.2"
env_logger = "^0.7.1"
futures = "^0.3.6"
log = "^0.4.11"
num_cpus = "^1.13.0"
rand = "0.7.3"
redis-async = "^0.6.3"
rust-crypto = "^0.2"
rustls = "^0.19.0"
serde = "^1.0.117"
serde_json = "^1.0.59"
tokio = {version = "^0.2.22", features = ["full"]}
tokio-util = "^0.3.1"


[profile.release]
panic = 'abort' # 8,6MB => 7.6MB
lto = true  # 13MB => 8,6MB
opt-level = 'z' # 8.6MB => 8.6MB
#codegen-units = 1 # 8.6MB => 8.2MB, compile times x2


[[bin]]
name = "secretnote-statistics-exporter"
path = "src/statistics/statistics.rs"
